tests/NormalTests/paczka1/fuzzy1/94198905.err
Error in line 1: 5QzMz4D6TLA S144 76,5
Error in line 9: 5QzMz4D6TLA S388 65,03
Error in line 10: 1H4StBks1j S144 15,3
Error in line 7: w8MU2pMM S940 423,1
Error in line 17: S974 S974 36,3
Error in line 19: S974 S940 46,0
Error in line 6: 5QzMz4D6TLA S940 52,1
Error in line 24: 5QzMz4D6TLA S388 227,9
Error in line 34: 5QzMz4D6TLA S388 79,7
